Rediseño servicios index.html

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -72,6 +72,12 @@
     margin-top: 30px;
 }
 
+
+.serviciosCenter {
+    display: flex;
+    justify-content: space-around;
+}
+
 .textoSerHome {
     margin-top: 50px;
     padding: 10px;
