--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -92,6 +92,10 @@ a {
   padding: 50px 20px 20px;
   margin-top: 30px; }
 
+.serviciosCenter {
+  display: flex;
+  justify-content: space-around; }
+
 .textoSerHome {
   margin-top: 50px;
   padding: 10px; }
