Cambio seccioń qué hacemos

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -27,8 +27,7 @@
 
 .sectionDos { 
     margin-top: 30px;
-    padding: 50px 70px 20px;
-    border: 5px;
+    padding-top: 60px;
     display: flex;
     justify-content: center;
     background-color: #F3F3F3;
