--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -57,8 +57,7 @@ a {
 /* Estilos Section Servicios*/
 .sectionDos {
   margin-top: 30px;
-  padding: 50px 70px 20px;
-  border: 5px;
+  padding-top: 60px;
   display: flex;
   justify-content: center;
   background-color: #F3F3F3;
