cambio página servicios

--- a/views/servicios.html
+++ b/views/servicios.html
@@ -81,88 +81,52 @@
 <!--Descripción 4 Servicios -->
 
 
-<section class="container sectionDosServicios">
+<section class="container sectionDosSer">
 
     <h2 class="sectionDosServicios__title">Nuestros Servicios</h2>
 
-    <div class="row">
-
-        <div class="col-lg-6 col-md-6 col-xs-12 colMarginSer">
-
-            <div class="col__textoSer">
-                <h3>Remodelación Integral</h3>
-                <p>Puedes solicitar la asesoría para la realización de tu nueva obra o renovación del hogar, es decir, la construcción de varios espacios. Dentro de este servicio ofrecemos distintas visitas e instancias de maqueta y visualización de render. </p>  
-            </div>
-
+    <div class="row g-4">
+      
+      <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
+        <div class="card" style="width: 18rem;">
+          <img src="../img/ServicioProyecto1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h2 class="card-title">Proyecto</h2>
+            <p class="card-text">Puedes solicitar la asesoría para la realización de tu nueva obra o renovación del hogar, es decir, la construcción de varios espacios. Dentro de este servicio ofrecemos distintas visitas e instancias de maqueta y visualización de render. </p>
+          </div>
         </div>
+      </div>
 
-        <div class="col-lg-6 col-md-6 col-xs-12 colMarginSer">
-
-            <img class="rounded mx-auto d-block" src="../img/ServicioProyecto1.png" alt="">   
-
+      <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
+        <div class="card"  style="width: 18rem;">
+          <img src="../img/ServicioRemodelación1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h2 class="card-title">Remodelación</h2>
+            <p class="card-text">Si no quieres partir de cero, puedes solicitar la renovación de una habitación, como cocina, baño, terraza, lo que tu requieras. Dentro de este servicio ofrecemos 3 visitas y diferentes render para visualizar el resultado de tu obra.</p>
+          </div>
         </div>
+      </div>
 
+      <div class="col serviciosCenter">
+        <div class="card" style="width: 18rem;">
+          <img src="../img/ServicioMuebles1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h2 class="card-title">Muebles</h2>
+            <p class="card-text">Como estudio también contamos un taller de carpintería para realizar los muebles que requieran los proyectos grandes. Pero también realizamos muebles a pedido, para clientes que requieren muebles únicos</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col serviciosCenter">
+        <div class="card" style="width: 18rem;">
+          <img src="../img/ServicioDecoración1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h2 class="card-title">Decoración</h2>
+            <p class="card-text">Si solo requieres la asesoría para decorar tu hogar, nosotros te ayudamos buscando los muebles, revestimientos y adornos más exclusivos y a buen precio del mercado.</p>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <div class="row">
-
-        <div class="col-lg-6 col-md-6 col-xs-12 colMarginSer">
-
-            <img class="rounded mx-auto d-block" src="../img/ServicioRemodelación1.png" alt="Servicio2"> 
-
-        </div>
-
-        <div class="col-lg-6 col-md-6 col-xs-12 colMarginSer">
-
-             <div class="col__textoSer">
-                <h3>Remodelación de un espacio</h3>
-                <p>Si no quieres partir de cero, puedes solicitar la renovación de una habitación, como cocina, baño, terraza, lo que tu requieras. Dentro de este servicio ofrecemos 3 visitas y diferentes render para visualizar el resultado de tu obra. </p> 
-            </div>
-
-        </div>
-
-    </div>
-
-    <div class="row">
-
-        <div class="col-lg-6 col-md-6 col-xs-12 colMarginSer">
-
-            <div class="col__textoSer">
-               <h3>Muebles</h3>
-               <p>Como estudio también contamos un taller de carpintería para realizar los muebles que requieran los proyectos grandes. Pero también realizamos muebles a pedido, para clientes que requieren muebles únicos.</p>
-            </div>
-
-        </div>
-
-        <div class="col-lg-6 col-md-6 col-xs-12 colMarginSer">
-
-            <img class="rounded mx-auto d-block" src="../img/ServicioMuebles1.png" alt="">   
-
-        </div>
-
-    </div>
-
-    <div class="row">
-
-        <div class="col-lg-6 col-md-6 col-xs-12 colMarginSer">
-
-            <img class="rounded mx-auto d-block" src="../img/ServicioDecoración1.png" alt="Servicio2"> 
-
-        </div>
-
-        <div class="col-lg-6 col-md-6 col-xs-12 colMarginSer">
-            
-            <div class="col__textoSer">
-                <h3>Decoración</h3>
-                <p>Si solo requieres la asesoría para decorar tu hogar, nosotros te ayudamos buscando los muebles, revestimientos y adornos más exclusivos y a buen precio del mercado.</p>
-            </div>
-
-        </div>
-
-    </div>
-
-
-
 </section>
 
 
