--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -144,15 +144,20 @@ a {
   margin-top: 30px; }
 
 .sectionUnoServicios {
-  height: 300px;
-  padding: 20px 70px 20px;
-  background-color: #F3F3F3; }
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  background-color: #F3F3F3;
+  height: 300px; }
 
 .row__textoServicios {
-  margin-top: 50px; }
+  margin-top: 50px;
+  width: 600px; }
 
-.sectionDosServicios {
-  margin-top: -20px;
+.sectionDosSer {
+  margin-top: 40px;
   margin-bottom: 30px; }
 
 .sectionDosServicios__title {
