--- a/assets/scss/_servicios.scss
+++ b/assets/scss/_servicios.scss
@@ -10,17 +10,22 @@
 }
 
 .sectionUnoServicios {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    background-color: #F3F3F3;
     height: 300px;
-    padding: 20px 70px 20px;
-    background-color: #F3F3F3;   
 }
 
 .row__textoServicios {
     margin-top: 50px;
+    width: 600px;
 }
 
-.sectionDosServicios {
-    margin-top: -20px;
+.sectionDosSer {
+    margin-top: 40px;
     margin-bottom: 30px;
 }
 
