--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -197,12 +197,16 @@ a {
   margin-top: 30px; }
 
 .secUnoNosotros {
-  padding: 20px 70px 20px;
+  margin-top: 20px;
+  padding-top: 10px;
+  display: flex;
+  justify-content: center;
   background-color: #F3F3F3;
   height: 300px; }
 
 .secUnoNosotros__texto {
-  margin-top: 50px; }
+  margin-top: 50px;
+  width: 600px; }
 
 .secEquipo {
   margin-top: 30px;
