--- a/assets/scss/_nosotros.scss
+++ b/assets/scss/_nosotros.scss
@@ -10,13 +10,17 @@
 }
 
 .secUnoNosotros {
-    padding: 20px 70px 20px;
+    margin-top: 20px;
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
     background-color: #F3F3F3;
     height: 300px;
 }
 
 .secUnoNosotros__texto {
     margin-top: 50px;
+    width: 600px;
 }
 
 .secEquipo {
