--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -68,8 +68,15 @@
   
   <div class="row marginImgPro">
 
-    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro">
+    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+      <figure class="effect-sadie">
         <img class="img-fluid rounded mx-auto d-block" src="../img/CocinaVintaje.png" alt="">
+        <figcaption>
+          <h3>Cocina <span>Las Condes</span></h3> 
+          <p>Proyecto cocina estilo vintage casa las Las Condes.</p>
+          <a href="#"></a>
+        </figcaption>
+      </figure>
     </div>
 
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro">
@@ -132,9 +139,10 @@
 
 </section>
 
+
+
+
 <!--Segunda Sección/Proyecto Integral-->
-
-
 
 <section class="container-fluid secColorProyectos">
 
