--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -43,7 +43,10 @@ a {
   height: 500px;
   padding: 50px 70px 20px;
   border: 5px;
-  background-image: url("../../img/SillaIndex.png"); }
+  background-image: url("../../img/SillaIndex.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center; }
 
 .sectionUno__texJumbo {
   width: 600px; }
