--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -9,6 +9,9 @@
     padding: 50px 70px 20px;
     border: 5px;
     background-image: url("../../img/SillaIndex.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .sectionUno__texJumbo {
