--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -70,7 +70,7 @@
 
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
-        <img class="img-fluid rounded mx-auto d-block" src="../img/CocinaVintaje.png" alt="">
+        <img class="img-fluid mx-auto d-block" src="../img/CocinaVintaje.png" alt="">
         <figcaption>
           <h3>Cocina <span>Las Condes</span></h3> 
           <p>Proyecto cocina estilo vintage casa las Las Condes.</p>
@@ -79,17 +79,31 @@
       </figure>
     </div>
 
-    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro">
-      <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria1.png" alt="">
+    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+      <figure class="effect-sadie">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria1.png" alt="">
+        <figcaption>
+          <h3>Muebles<span>Los Molinos</span></h3> 
+          <p>Desarrollo de mobiliario casa Los Molinos.</p>
+          <a href="#"></a>
+        </figcaption>
+      </figure>
     </div>
 
-    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro">
-        <img class="img-fluid rounded mx-auto d-block" src="../img/TerrazaMadera.png" alt="">
+    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+      <figure class="effect-sadie">
+        <img class="img-fluid mx-auto d-block" src="../img/TerrazaMadera.png" alt="">
+        <figcaption>
+          <h3>Terraza<span>Pacheco</span></h3> 
+          <p>Remodelación Terraza Maule</p>
+          <a href="#"></a>
+        </figcaption>
+      </figure>
     </div>
     
-  </div>
+  
 
-  <div class="row marginImgPro">
+ 
 
     <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro">
         <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria6.png" alt="">
@@ -103,9 +117,9 @@
         <img class="img-fluid rounded mx-auto d-block" src="../img/BañoModerno.png" alt="">
     </div>
     
-  </div>
+  
 
-  <div class="row marginImgPro">
+  
 
     <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro">
         <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria8.png" alt="">
@@ -119,9 +133,9 @@
         <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria9.png" alt="">
     </div>
     
-  </div>
+  
 
-  <div class="row marginImgPro">
+
 
     <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro">
         <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria2.png" alt="">
