--- a/views/contacto.html
+++ b/views/contacto.html
@@ -83,37 +83,24 @@
 
 <section class="container-fluid secFormulario">
 
-  <form>
-    <div class="form-row">
-      <div class="form-group col-md-6">
+  <form class="col-lg-6 col-xs-12">
+    <div class="form-group">
+      <div class="form-group">
         <label for="inputEmail4">Nombre</label>
         <input type="name" class="form-control" id="inputEmail4">
       </div>
       <br>
-      <div class="form-group col-md-6">
+      <div class="form-group">
         <label for="inputPassword4">Email</label>
         <input type="email" class="form-control" id="inputEmail4">
       </div>
     </div>
     <br>
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="inputEmail4">Telefono</label>
-        <input type="fone" class="form-control" id="inputEmail4">
-      </div>
-      <br>
-      <div class="form-group col-md-6">
-        <label for="inputPassword4">Indique el asunto</label>
-        <input type="password" class="form-control" id="inputPassword4">
-      </div>
-    </div>
-
-    <br>
-    <div class=" col-md-6 mb-3">
+    <div class="mb-3">
       <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
     </div>
-      <div class="form-group col-md-4">
+      <div class="form-group">
         <label for="inputState">Selecciona Servicio</label>
         <select id="inputState" class="form-control">
           <option selected>Proyecto</option>
@@ -123,11 +110,10 @@
         </select>
       </div>
       <br>
-      <div class="form-group col-md-2">
+      <div class="form-group">
         <label for="inputZip">¿Desea recibir Newsletter?</label>
       </div>
     </div>
-  
     <div class="form-group">
       <div class="form-check">
         <input class="form-check-input" type="checkbox" id="gridCheck">
@@ -140,11 +126,13 @@
     <button type="submit" class="btn btn-light">Limpiar</button>
   </form>
 
+  <div class="col-lg-6 col-xs-12 row mt-3">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3330.7000520725983!2d-70.57491498559494!3d-33.404988780786965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662ced89f33db9b%3A0x3d8edbdab97e31b8!2sRosario%20Nte%2C%20Las%20Condes%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1622646669207!5m2!1ses-419!2scl" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
+  </div>
+
 </section>
 
-<section>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3330.7000520725983!2d-70.57491498559494!3d-33.404988780786965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662ced89f33db9b%3A0x3d8edbdab97e31b8!2sRosario%20Nte%2C%20Las%20Condes%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses-419!2scl!4v1622646669207!5m2!1ses-419!2scl" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-</section>
+
 
 
 <!--Footer-->
