--- a/assets/scss/_contacto.scss
+++ b/assets/scss/_contacto.scss
@@ -30,4 +30,8 @@
    margin-top: 30px;
    margin-bottom: 30px;
    padding: 20px 70px 20px;
+   display: flex;
+   justify-content: space-around;
 }
+
+
