--- a/assets/scss/_proyectos.scss
+++ b/assets/scss/_proyectos.scss
@@ -23,6 +23,7 @@
 
 .marginImgPro {
     margin-bottom: 20px;
+	padding-bottom: 20px;
 }
 
 /*Efecto*/
@@ -50,7 +51,6 @@
 .grid figure img {
 	position: relative;
 	display: block;
-	opacity: 0.8;
 }
 
 .grid figure figcaption {
@@ -84,17 +84,18 @@
 	white-space: nowrap;
 	font-size: 0;
 	opacity: 0;
-}
-
-.grid figure h3 {
-	font-size: 15pt;
-	word-spacing: -0.15em;
-	font-weight: 300;
 	font-style: none;
 }
 
-.grid figure h3 span {
+.grid figure h3 {
+	text-transform: none;
+	font-size: 15pt;
 	font-weight: 500;
+}
+
+.grid figure h3 span {
+	font-weight: 300;
+	font-style: none;
 }
 
 .grid figure h3,
