--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -83,7 +83,7 @@
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/Galeria1.png" alt="">
         <figcaption>
-          <h3>Muebles<span>Los Molinos</span></h3> 
+          <h3>Muebles <span>Los Molinos</span></h3> 
           <p>Desarrollo de mobiliario casa Los Molinos.</p>
           <a href="#"></a>
         </figcaption>
@@ -94,67 +94,116 @@
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/TerrazaMadera.png" alt="">
         <figcaption>
-          <h3>Terraza<span>Pacheco</span></h3> 
-          <p>Remodelación Terraza Maule</p>
+          <h3>Terraza <span>Pacheco</span></h3> 
+          <p>Remodelación Terraza Regipon del Maule</p>
           <a href="#"></a>
         </figcaption>
       </figure>
     </div>
     
-  
 
- 
-
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro">
-        <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria6.png" alt="">
+    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+      <figure class="effect-sadie">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria6.png" alt="">
+        <figcaption>
+          <h3>Proyecto <span>Isidora</span></h3> 
+          <p>Desarrollo de obra nueva para casa en la playa</p>
+          <a href="#"></a>
+        </figcaption>
+      </figure>
     </div>
 
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro">
-      <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria10.png" alt="">
+    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+      <figure class="effect-sadie">
+        <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria10.png" alt="">
+      <figcaption>
+        <h3>Dormitorio <span>Las Leñas</span></h3> 
+        <p>Desarrollo de mobiliario para habitación</p>
+        <a href="#"></a>
+      </figcaption>
+      </figure>
     </div>
 
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro">
-        <img class="img-fluid rounded mx-auto d-block" src="../img/BañoModerno.png" alt="">
+    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+      <figure class="effect-sadie">
+        <img class="img-fluid mx-auto d-block" src="../img/BañoModerno.png" alt="">
+      <figcaption>
+        <h3>Baño <span>Las Leñas</span></h3> 
+        <p>Remodelación de baño para casa en Las Leñas</p>
+        <a href="#"></a>
+      </figcaption>
+      </figure>
     </div>
     
-  
-
-  
-
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro">
-        <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria8.png" alt="">
+    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+      <figure class="effect-sadie">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria8.png" alt="">
+      <figcaption>
+        <h3>Baño <span>Santa Cruz</span></h3> 
+        <p>Remodelación para casa en Santa Cruz</p>
+        <a href="#"></a>
+      </figcaption>
+      </figure>  
     </div>
 
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro">
-      <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria3.png" alt="">
+    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+      <figure class="effect-sadie">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria3.png" alt="">
+      <figcaption>
+        <h3>Cocina <span>Tobalaba</span></h3> 
+        <p>Remodelación para cocina en departamento</p>
+        <a href="#"></a>
+      </figcaption>
+      </figure>
     </div>
 
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro">
-        <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria9.png" alt="">
+    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+      <figure class="effect-sadie">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria9.png" alt="">
+      <figcaption>
+        <h3>Muebles <span>Rancagua</span></h3> 
+        <p>Desarrollo de muebles para living en Rancagua</p>
+        <a href="#"></a>
+      </figcaption>
+      </figure>
     </div>
     
-  
-
-
-
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro">
-        <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria2.png" alt="">
+    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+      <figure class="effect-sadie">
+         <img class="img-fluid mx-auto d-block" src="../img/Galeria2.png" alt="">
+      <figcaption>
+        <h3>Baños <span>Pirque</span></h3> 
+        <p>Remodelación de baño para casa en Pirque</p>
+        <a href="#"></a>
+      </figcaption>
+      </figure>
     </div>
 
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro">
-      <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria7.png" alt="">
+    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+      <figure class="effect-sadie">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria7.png" alt="">
+      <figcaption>
+        <h3>Cocina <span>San Fernando</span></h3> 
+        <p>Remodelación de cocina para casa de campo en San Fermando/p>
+        <a href="#"></a>
+      </figcaption>
+      </figure>
     </div>
 
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro">
-        <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria4.png" alt="">
+    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+      <figure class="effect-sadie">
+        <img class="img-fluid mx-auto d-block" src="../img/Galeria4.png" alt="">
+      <figcaption>
+        <h3>Decoración <span>Las Condes</span></h3> 
+        <p>Decoración para departamento nuevo en Las Condes</p>
+        <a href="#"></a>
+      </figcaption>
+      </figure>
     </div>
     
   </div>
 
 </section>
-
-
-
 
 <!--Segunda Sección/Proyecto Integral-->
 
