--- a/assets/scss/_proyectos.scss
+++ b/assets/scss/_proyectos.scss
@@ -45,7 +45,8 @@
 	background: #e2e2e2;
 	text-align: center;
 	cursor: pointer;
-	box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+	border-radius: 3px;
+	box-shadow: 0.4rem 0.4rem 0.4rem  rgba(167, 167, 167, 0.4);
 }
 
 .grid figure img {
