--- a/views/contacto.html
+++ b/views/contacto.html
@@ -57,15 +57,17 @@
 
 <!--Primera Sección/Fotografía+Título Principal-->
 
-<section class="container-fluid secUnoContacto">
-  
-     <h1>Contactanos</h1>
-
-  <div class="secUnoContacto__texto">   
-     <p>¿Quieres cotizar un proyecto con nosotros y renovar tu casa o departamento? Completa el siguiente formulario para contactarte con AtticoStudio.</p>
+<section class="secUnoContacto">
+  <div class="card bg-dark">
+    <img src="../img/conP.png" class="card-img" alt="...">
+    <div class="card-img-overlay secUnoBodyContacto">
+      <h1 class="card-title">Contacto</h1>
+      <div class="secUnoBodyContacto__texto">
+        <p>Si quieres contactarnos realiza el siguiente formulario con la información solicitada, indicando el asunto y el tipo de servicio que quieres. Recuerda adjuntar un plano si el servicio así lo requiere.</p>
+      </div>
+    </div>
   </div>
-
-</section>   
+</section>
 
 <!--Segunda Sección texto contacto-->
 
