--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -59,33 +59,25 @@
 <!--Primera Sección/Nuestra Hisoria-->
 
 <section class="container-fluid">
-
   <h1 class="tituloNosotros">Nosotros</h1>
-
 </section>
 
 <section class=" container-fluid secUnoNosotros">
-
-    <div class="secUnoNosotros__texto text-center col-lg-12 col-md-12 col-xs-12">
-    <h2>Quienes somos</h2>
-        <p class="text-center">Somos un estudio de arquitectura de interior dedicado al diseño para remodelaciones y decoración de interiores.
-        Destacamos por tener un equipo profesional multidiciplinar, en el área del diseño y la arquitectura.</p>
-        <p class="text-center">Nuestra pasión es crear hogares cálidos y llenos de vida. Espacios con historias que nos invitan a compartir con nuestros seres queridos y que transmitan emociones.</p>
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-xs-12 secUnoNosotros__texto mt-1">
+      <h2 class="mb-3">Quienes Somos</h2>
+      <p>Somos un estudio de arquitectura de interior dedicado al diseño para remodelaciones y decoración de interiores. <span> Nuestra pasión es crear hogares cálidos y llenos de vida,</span> con historias que nos invitan a compartir con nuestros seres queridos y que transmitan emociones.</p>
     </div>
-    
+  </div>
 </section>   
 
 <!--Segunda Sección/Nuestro Equipo-->
 
 <section class="container-fluid secEquipo">
-
-  
   <div class="secEquipo__title">
     <h2>Nuestro Equipo</h2>
   </div>
-
   <div class="row">
- 
   <div class="col-lg-3 col-md-6 col-xs-12 centerEquipo">
     <div class="card border-light" style="width: 13rem;">
       <img src="../img/arquitecto1.png" class="card-img-top" alt="arquitecto 1">
@@ -95,7 +87,6 @@
       </div>
     </div>
   </div>
-
   <div class="col-lg-3 col-md-6 col-xs-12 centerEquipo">
     <div class="card border-light" style="width: 13rem;">
       <img src="../img/arquitecto2.png" class="card-img-top" alt="...">
@@ -105,7 +96,6 @@
       </div>
     </div>
   </div>
-
   <div class="col-lg-3 col-md-6 col-xs-12 centerEquipo">
     <div class="card border-light" style="width: 13rem;">
       <img src="../img/diseñador1.png" class="card-img-top" alt="...">
@@ -115,7 +105,6 @@
       </div>
     </div>
   </div>
-
   <div class="col-lg-3 col-md-6 col-xs-12 centerEquipo">
     <div class="card border-light" style="width: 13rem;">
       <img src="../img/diseñador2.png" class="card-img-top" alt="...">
@@ -125,61 +114,8 @@
       </div>
     </div>
   </div>
-
   </div>
 </section>
-
-
-<!--Section Seguimos Creciendo/ Sass-->
-
-<section class="container-fluid sectionCreciendo">
-
-  <div class="row">
-
-      <div class="col-lg-12 col-md-12 col-xs12 text-center">
-          <h2 class="col-lg-12 col-md-12 col-xs-12__titleCreciendo">Seguimos Creciendo</h2>
-          <p class="col-lg-12 col-md-12 col-xs-12__parrafoCreciendo text-center ">Creemos en que un buen proyecto es mitad cliente, mitad arquitecto, lo que nos ha llevado a que cada uno de nuestros diseños sea único y diferente al resto.</p>
-      </div>
-
-      <div class="col-lg-3 col-md-6 col-xs-12 ">
-
-        <div class="col__textoCreciendo text-center colorTitle--titleuno">
-          +20 mil mt2 diseñados en nuestro estudio
-        </div>
-
-      </div>
-
-      <div class="col-lg-3 col-md-6 col-xs-12">
-
-        <div class="col__textoCreciendo text-center colorTitle--titledos">
-          +150 clientes felices con nuestro trabajo
-        </div>
-
-      </div>
-
-      <div class="col-lg-3 col-md-6 col-xs-12">
-
-        <div class="col__textoCreciendo text-center colorTitle--titletres">
-          +3 regiones de Chile con nuestro sello
-        </div>
-
-      </div>
-
-      <div class="col-lg-3 col-md-6 col-xs-12">
-
-        <div class="col__textoCreciendo text-center colorTitle--titlecuatro">
-          +100 proyectos en los últimos 4 años
-        </div>
-
-      </div>
-
-
-
-  </div>
-
-</section>
-
-
 
 <!--Footer-->
 
