--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -95,7 +95,7 @@
         <img class="img-fluid mx-auto d-block" src="../img/TerrazaMadera.png" alt="">
         <figcaption>
           <h3>Terraza <span>Pacheco</span></h3> 
-          <p>Remodelación Terraza Regipon del Maule</p>
+          <p>Remodelación Terraza Región del Maule</p>
           <a href="#"></a>
         </figcaption>
       </figure>
