--- a/views/servicios.html
+++ b/views/servicios.html
@@ -67,14 +67,11 @@
 <section class="container-fluid sectionUnoServicios">
 
  <div class="row">
-
-    <div class="row__textoServicios text-center col-lg-12 col-md-12 col-xs-12">
-     <h2>Nuestro Trabajo</h2>
-        <p class="text-center">Somos un equipo multidisciplinario capaz de abarcar distintas competencias. Abarcamos una visión global desde la arquitectura apoyandonos en conjunto con diseñadores para obtener un resultado integral. Nos preocupamos de la iluminación, la funcionalidad del espacio, la sustentabilidad, la belleza y la economía. </p>
+    <div class="col-lg-6 col-md-6 col-xs-12 sectionTextoSer mt-1">
+      <h2 class="mb-3">Qué hacemos</h2>
+      <p>Somos un <span>equipo multidisciplinario</span> capaz de abarcar distintas competencias. Tenemos una visión global desde la <span>arquitectura en conjunto con diseñadores</span> para obtener un resultado integral.</p>
     </div>
-
-
-    </div>
+  </div>
 </section>
 
 
@@ -88,7 +85,7 @@
     <div class="row g-4">
       
       <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
-        <div class="card" style="width: 18rem;">
+        <div class="card shadow" style="width: 18rem;">
           <img src="../img/ServicioProyecto1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h2 class="card-title">Proyecto</h2>
@@ -98,7 +95,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
-        <div class="card"  style="width: 18rem;">
+        <div class="card shadow"  style="width: 18rem;">
           <img src="../img/ServicioRemodelación1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h2 class="card-title">Remodelación</h2>
@@ -108,7 +105,7 @@
       </div>
 
       <div class="col serviciosCenter">
-        <div class="card" style="width: 18rem;">
+        <div class="card shadow" style="width: 18rem;">
           <img src="../img/ServicioMuebles1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h2 class="card-title">Muebles</h2>
@@ -118,7 +115,7 @@
       </div>
 
       <div class="col serviciosCenter">
-        <div class="card" style="width: 18rem;">
+        <div class="card shadow" style="width: 18rem;">
           <img src="../img/ServicioDecoración1.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h2 class="card-title">Decoración</h2>
