--- a/assets/scss/_contacto.scss
+++ b/assets/scss/_contacto.scss
@@ -3,16 +3,22 @@
 
 /*Contacto*/
 
-.secUnoContacto{
-    height: 500px;
-    padding: 20px 70px 20px;
+.secUnoContacto {
     margin-top: 30px;
-    background-image: url("../../img/conP.png");
+    height: 500px;
 }
 
-.secUnoContacto__texto {
+.secUnoBodyContacto{
+    margin-top: -20px;
+    height: 500px;
+    padding: 50px 70px 20px;
+    border: 5px;
+    width: 600px;
+}
+
+.secUnoBodyContacto__texto {
+    margin-top: 20px;
     width: 500px;
-    margin-top: 30px;
 }
 
 .secContacto {
@@ -21,6 +27,8 @@
     margin-top: 30px;
     margin-bottom: 100px;
 }
+
+
 
 .secContacto__texto {
     margin-top: 20px;
