Ordené nesting footer en todas los html

--- a/views/servicios.html
+++ b/views/servicios.html
@@ -42,7 +42,6 @@
                    <li class="nav-item">
                      <a class="nav-link" href="./blog.html">Blog</a>
                    </li>
-             
                    <li class="nav-item">
                      <a class="nav-link" href="./views/contacto.html">Contacto</a>
                    </li>
@@ -51,21 +50,16 @@
              </div>
            </nav>
         </div>
-    </div>
-    
- </header>
+    </div>    
+</header>
 
 <!--Servicios Primer Sección-->
 
 <section class="container-fluid">
-
   <h1 class="tituloServicios">Servicios</h1>
-
 </section>
 
-
 <section class="container-fluid sectionUnoServicios">
-
  <div class="row">
     <div class="col-lg-6 col-md-6 col-xs-12 sectionTextoSer mt-1">
       <h2 class="mb-3">Qué hacemos</h2>
@@ -74,16 +68,11 @@
   </div>
 </section>
 
-
 <!--Descripción 4 Servicios -->
 
-
 <section class="container sectionDosSer">
-
     <h2 class="sectionDosServicios__title">Nuestros Servicios</h2>
-
     <div class="row g-4">
-      
       <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
           <img src="../img/ServicioProyecto1.png" class="card-img-top" alt="...">
@@ -93,7 +82,6 @@
           </div>
         </div>
       </div>
-
       <div class="col-lg-6 col-md-6 col-xs-12 serviciosCenter">
         <div class="card shadow"  style="width: 18rem;">
           <img src="../img/ServicioRemodelación1.png" class="card-img-top" alt="...">
@@ -103,7 +91,6 @@
           </div>
         </div>
       </div>
-
       <div class="col serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
           <img src="../img/ServicioMuebles1.png" class="card-img-top" alt="...">
@@ -113,7 +100,6 @@
           </div>
         </div>
       </div>
-
       <div class="col serviciosCenter">
         <div class="card shadow" style="width: 18rem;">
           <img src="../img/ServicioDecoración1.png" class="card-img-top" alt="...">
@@ -126,94 +112,47 @@
     </div>
 </section>
 
-
-
 <!--Footer-->
     
 <footer class="page-footer font-small mdb-color lighten-3 pt-4">
-
-    <!-- Footer Links -->
-    <div class="container text-md-left">
-  
-      <!-- Grid row -->
-      <div class="row">
-   
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-5 mb-1">
-  
+  <div class="container text-md-left">   
+    <div class="row">
+      <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-5 mb-1">
         <a href="./index.html"><img src="../img/LogoAtticoWhite.svg" width="210px" alt=""></a>
-  
-        </div>
-    
-  
-        <hr class="clearfix w-100 d-md-none">
-  
-        <!-- Grid column -->
-        
-        <div class="col-xs-12 col-md-4 col-lg-4 mx-auto my-md-4 my-0 mt-4 mb-1">
-  
-            <h5>Contacto</h5>
-
+      </div>
+      <hr class="clearfix w-100 d-md-none">        
+      <div class="col-xs-12 col-md-4 col-lg-4 mx-auto my-md-4 my-0 mt-4 mb-1">
+        <h5>Contacto</h5>
             <ul class="list-unstyled">
               <li>
-                <p>
-                  Rosario Norte, 588, Las Condes, Chile. 
-                </p>
+                <p>Rosario Norte, 588, Las Condes, Chile.</p>
               </li>
               <li>
-                <p>
-                  contacto@atticostudio.cl
-                </p>
+                <p>contacto@atticostudio.cl</p>
               </li>
               <li>
-                <p>
-                  + 56 9 12345678
-                </p>
+                <p>+ 56 9 12345678</p>
               </li>
-            
             </ul>
-    
-          </div>
-          
-        <!-- Grid column -->
-  
-        <hr class="clearfix w-100 d-md-none">
-  
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
-  
-          <!-- Social buttons -->
-          <h5>Redes Sociales</h5>
-  
-          <!-- Facebook -->
+      </div>
+      <hr class="clearfix w-100 d-md-none">
+      <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
+        <h5>Redes Sociales</h5>
           <a type="button" class="btn-floating btn-fb">
             <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
           </a>
-          <!-- Instagram -->
           <a type="button" class="btn-floating btn-tw">
             <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt=""></i>
           </a>
-          <!-- Linkedin -->
           <a type="button" class="btn-floating btn-gplus">
             <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt=""></i>
           </a>
-        
-  
-        </div>
-      
-  
       </div>
-     
-  
     </div>
-   
-  
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">
-        © Todos los derechos reservados, 2021.
-    </div>
-    
-  
+  </div>
+  <div class="footer-copyright text-center py-3">
+    © Todos los derechos reservados, 2021.
+  </div> 
 </footer>
 
 
