--- a/views/blog.html
+++ b/views/blog.html
@@ -216,90 +216,45 @@
 <!--Footer-->
 
 <footer class="page-footer font-small mdb-color lighten-3 pt-4">
-
-    <!-- Footer Links -->
-    <div class="container text-md-left">
-  
-      <!-- Grid row -->
-      <div class="row">
-   
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-5 mb-1">
-  
+  <div class="container text-md-left">   
+    <div class="row">
+      <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-5 mb-1">
         <a href="./index.html"><img src="../img/LogoAtticoWhite.svg" width="210px" alt=""></a>
-  
-        </div>
-    
-  
-        <hr class="clearfix w-100 d-md-none">
-  
-        <!-- Grid column -->
-        
-        <div class="col-xs-12 col-md-4 col-lg-4 mx-auto my-md-4 my-0 mt-4 mb-1">
-  
-            <h5>Contacto</h5>
-
+      </div>
+      <hr class="clearfix w-100 d-md-none">        
+      <div class="col-xs-12 col-md-4 col-lg-4 mx-auto my-md-4 my-0 mt-4 mb-1">
+        <h5>Contacto</h5>
             <ul class="list-unstyled">
               <li>
-                <p>
-                  Rosario Norte, 588, Las Condes, Chile. 
-                </p>
+                <p>Rosario Norte, 588, Las Condes, Chile.</p>
               </li>
               <li>
-                <p>
-                  contacto@atticostudio.cl
-                </p>
+                <p>contacto@atticostudio.cl</p>
               </li>
               <li>
-                <p>
-                  + 56 9 12345678
-                </p>
+                <p>+ 56 9 12345678</p>
               </li>
-            
             </ul>
-    
-          </div>
-          
-        <!-- Grid column -->
-  
-        <hr class="clearfix w-100 d-md-none">
-  
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
-  
-          <!-- Social buttons -->
-          <h5>Redes Sociales</h5>
-  
-          <!-- Facebook -->
+      </div>
+      <hr class="clearfix w-100 d-md-none">
+      <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
+        <h5>Redes Sociales</h5>
           <a type="button" class="btn-floating btn-fb">
             <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
           </a>
-          <!-- Instagram -->
           <a type="button" class="btn-floating btn-tw">
             <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt=""></i>
           </a>
-          <!-- Linkedin -->
           <a type="button" class="btn-floating btn-gplus">
             <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt=""></i>
           </a>
-        
-  
-        </div>
-      
-  
       </div>
-     
-  
     </div>
-   
-  
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">
-        © Todos los derechos reservados, 2021.
-    </div>
-    
-  
-  </footer>
+  </div>
+  <div class="footer-copyright text-center py-3">
+    © Todos los derechos reservados, 2021.
+  </div> 
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>     
  
