--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -41,7 +41,6 @@
                    <li class="nav-item">
                      <a class="nav-link" href="./blog.html">Blog</a>
                    </li>
-             
                    <li class="nav-item">
                      <a class="nav-link" href="./contacto.html">Contacto</a>
                    </li>
@@ -50,24 +49,19 @@
              </div>
            </nav>
         </div>
-    </div>
-    
- </header>
+    </div>   
+</header>
 
 <!--Primera Sección/Titulo-->
 
 <section class="container-fluid">  
-
-<h1 class="tituloProyectos">Proyectos</h1> 
-
+  <h1 class="tituloProyectos">Proyectos</h1> 
 </section>
 
 <!--Segunda Sección/Galeria de Proyectos-->
 
-<section class="container">
-  
+<section class="container"> 
   <div class="row marginImgPro">
-
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/CocinaVintaje.png" alt="">
@@ -78,7 +72,6 @@
         </figcaption>
       </figure>
     </div>
-
     <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/Galeria1.png" alt="">
@@ -95,114 +88,102 @@
         <img class="img-fluid mx-auto d-block" src="../img/TerrazaMadera.png" alt="">
         <figcaption>
           <h3>Terraza <span>Pacheco</span></h3> 
-          <p>Remodelación Terraza Región del Maule</p>
+          <p>Remodelación Terraza Región del Maule.</p>
           <a href="#"></a>
         </figcaption>
       </figure>
     </div>
-    
-
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/Galeria6.png" alt="">
         <figcaption>
           <h3>Proyecto <span>Isidora</span></h3> 
-          <p>Desarrollo de obra nueva para casa en la playa</p>
+          <p>Desarrollo de obra nueva para casa en la playa.</p>
           <a href="#"></a>
         </figcaption>
       </figure>
     </div>
-
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
         <img class="img-fluid rounded mx-auto d-block" src="../img/Galeria10.png" alt="">
       <figcaption>
         <h3>Dormitorio <span>Las Leñas</span></h3> 
-        <p>Desarrollo de mobiliario para habitación</p>
+        <p>Desarrollo de mobiliario para habitación principal.</p>
         <a href="#"></a>
       </figcaption>
       </figure>
     </div>
-
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/BañoModerno.png" alt="">
       <figcaption>
         <h3>Baño <span>Las Leñas</span></h3> 
-        <p>Remodelación de baño para casa en Las Leñas</p>
+        <p>Remodelación de baño para casa en Las Leñas.</p>
         <a href="#"></a>
       </figcaption>
       </figure>
     </div>
-    
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/Galeria8.png" alt="">
       <figcaption>
         <h3>Baño <span>Santa Cruz</span></h3> 
-        <p>Remodelación para casa en Santa Cruz</p>
+        <p>Remodelación de baño principal para casa en Santa Cruz.</p>
         <a href="#"></a>
       </figcaption>
       </figure>  
     </div>
-
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/Galeria3.png" alt="">
       <figcaption>
         <h3>Cocina <span>Tobalaba</span></h3> 
-        <p>Remodelación para cocina en departamento</p>
+        <p>Remodelación para cocina en departamento.</p>
         <a href="#"></a>
       </figcaption>
       </figure>
     </div>
-
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/Galeria9.png" alt="">
       <figcaption>
         <h3>Muebles <span>Rancagua</span></h3> 
-        <p>Desarrollo de muebles para living en Rancagua</p>
+        <p>Desarrollo de muebles para casa en Rancagua.</p>
         <a href="#"></a>
       </figcaption>
       </figure>
     </div>
-    
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
          <img class="img-fluid mx-auto d-block" src="../img/Galeria2.png" alt="">
       <figcaption>
         <h3>Baños <span>Pirque</span></h3> 
-        <p>Remodelación de baño para casa en Pirque</p>
+        <p>Remodelación de baño para casa en Pirque.</p>
         <a href="#"></a>
       </figcaption>
       </figure>
     </div>
-
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/Galeria7.png" alt="">
       <figcaption>
         <h3>Cocina <span>San Fernando</span></h3> 
-        <p>Remodelación de cocina para casa de campo en San Fermando/p>
+        <p>Remodelación de cocina para casa de campo en San Fermando.</p>
         <a href="#"></a>
       </figcaption>
       </figure>
     </div>
-
-    <div class="prob col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
+    <div class="col-lg-4 col-md-6 col-xs-12 marginImgPro grid">
       <figure class="effect-sadie">
         <img class="img-fluid mx-auto d-block" src="../img/Galeria12.png" alt="">
       <figcaption>
         <h3>Decoración <span>Las Condes</span></h3> 
-        <p>Decoración para departamento nuevo en Las Condes</p>
+        <p>Decoración para habitación de niños en Las Condes.</p>
         <a href="#"></a>
       </figcaption>
       </figure>
-    </div>
-    
+    </div> 
   </div>
-
 </section>
 
 <!--Segunda Sección/Proyecto Integral-->
@@ -221,89 +202,44 @@
 <!--Footer-->
 
 <footer class="page-footer font-small mdb-color lighten-3 pt-4">
-
-  <!-- Footer Links -->
-  <div class="container text-md-left">
-
-    <!-- Grid row -->
+  <div class="container text-md-left">   
     <div class="row">
- 
-      <!-- Grid column -->
       <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-5 mb-1">
-
-      <a href="./index.html"><img src="../img/LogoAtticoWhite.svg" width="210px" alt=""></a>
-
+        <a href="./index.html"><img src="../img/LogoAtticoWhite.svg" width="210px" alt=""></a>
       </div>
-  
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      
+      <hr class="clearfix w-100 d-md-none">        
       <div class="col-xs-12 col-md-4 col-lg-4 mx-auto my-md-4 my-0 mt-4 mb-1">
-
-          <h5>Contacto</h5>
-
-          <ul class="list-unstyled">
-            <li>
-              <p>
-                Rosario Norte, 588, Las Condes, Chile. 
-              </p>
-            </li>
-            <li>
-              <p>
-                contacto@atticostudio.cl
-              </p>
-            </li>
-            <li>
-              <p>
-                + 56 9 12345678
-              </p>
-            </li>
-          
-          </ul>
-  
-        </div>
-        
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
-
-        <!-- Social buttons -->
-        <h5>Redes Sociales</h5>
-
-        <!-- Facebook -->
-        <a type="button" class="btn-floating btn-fb">
-          <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
-        </a>
-        <!-- Instagram -->
-        <a type="button" class="btn-floating btn-tw">
-          <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt=""></i>
-        </a>
-        <!-- Linkedin -->
-        <a type="button" class="btn-floating btn-gplus">
-          <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt=""></i>
-        </a>
-      
-
+        <h5>Contacto</h5>
+            <ul class="list-unstyled">
+              <li>
+                <p>Rosario Norte, 588, Las Condes, Chile.</p>
+              </li>
+              <li>
+                <p>contacto@atticostudio.cl</p>
+              </li>
+              <li>
+                <p>+ 56 9 12345678</p>
+              </li>
+            </ul>
       </div>
-    
-
+      <hr class="clearfix w-100 d-md-none">
+      <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
+        <h5>Redes Sociales</h5>
+          <a type="button" class="btn-floating btn-fb">
+            <i class="fab fa-facebook-f"><img src="../img/facebook.svg" width="30px"alt=""></i>
+          </a>
+          <a type="button" class="btn-floating btn-tw">
+            <i class="fab fa-twitter"><img src="../img/instagram.svg" width="30px"alt=""></i>
+          </a>
+          <a type="button" class="btn-floating btn-gplus">
+            <i class="fab fa-google-plus-g"><img src="../img/linkedin.svg" width="30px" alt=""></i>
+          </a>
+      </div>
     </div>
-   
-
   </div>
- 
-
-  <!-- Copyright -->
   <div class="footer-copyright text-center py-3">
-      © Todos los derechos reservados, 2021.
-  </div>
-  
-
+    © Todos los derechos reservados, 2021.
+  </div> 
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
